done service Transfer money

--- a/File Thực Hiện/Services/Services/Transfer/Transfer.csproj
+++ b/File Thực Hiện/Services/Services/Transfer/Transfer.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppUtils.cs" />
     <Compile Include="Controller\GiaoDichChuyenTienController.cs" />
     <Compile Include="Model\DataContext.cs" />
     <Compile Include="Model\GiaoDichChuyenTien.cs" />
