Done implement all api from GiaoDichRutTienController.cs in testing

--- a/File Thực Hiện/Services/Services/CashWithdraw/CashWithdraw.csproj
+++ b/File Thực Hiện/Services/Services/CashWithdraw/CashWithdraw.csproj
@@ -74,6 +74,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\GiaoDichRutTienController.cs" />
+    <Compile Include="Model\DataContext.cs" />
     <Compile Include="Model\GiaoDichRutTien.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -83,9 +85,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controller\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{52c922b4-8edf-45c8-968e-66ffffbddf5a}</Project>
