all changes in project (all service)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 ################################################################################
 
 /File Thực Hiện/Services/Services/.vs/Services/v14
+/File Thực Hiện/Services/Services/CashWithdraw/bin/Debug
+/File Thực Hiện/Services/Services/CashWithdraw/obj/Debug
+/File Thực Hiện/Services/Services/Common/bin/Debug
+/File Thực Hiện/Services/Services/Common/obj/Debug
+/File Thực Hiện/Services/Services/CreateSaveAccount/bin/Debug
+/File Thực Hiện/Services/Services/CreateSaveAccount/obj/Debug
+/File Thực Hiện/Services/Services/Recharge/bin/Debug
+/File Thực Hiện/Services/Services/Recharge/obj/Debug
+/File Thực Hiện/Services/Services/Transfer/bin/Debug
+/File Thực Hiện/Services/Services/Transfer/obj/Debug
+/File Thực Hiện/Services/Services/packages
