add customer service api integrate vuejs to frontend project

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /File Thực Hiện/Services/Services/Transfer/bin/Debug
 /File Thực Hiện/Services/Services/Transfer/obj/Debug
 /File Thực Hiện/Services/Services/packages
+/File Thực Hiện/Services/Services/Customer/obj
+/File Thực Hiện/Services/Services/Customer/bin
