add Account Service API implement Frontend with vuejs (rut tien, chuyen tien)

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /File Thực Hiện/Services/Services/packages
 /File Thực Hiện/Services/Services/Customer/obj
 /File Thực Hiện/Services/Services/Customer/bin
+/File Thực Hiện/Services/Services/Account/obj
+/File Thực Hiện/Services/Services/Account/bin
