--- a/File Thực Hiện/Services/Services/Common/Common.csproj
+++ b/File Thực Hiện/Services/Services/Common/Common.csproj
@@ -43,6 +43,7 @@
     <Compile Include="AppUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Enum.cs" />
+    <Compile Include="ThongKe.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
